--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" style="overflow-x: hidden;">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lubna Alghamdi - Portfolio</title>
   <meta name="description" content="Portfolio of Lubna Alghamdi - AI & Data Analysis Specialist." />
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
