--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </head>
 <body>
   <nav>
-    <div class="nav-logo">L G</div>
+    <div class="nav-logo">
+      <img src="logo.png" alt="Lubna Alghamdi Logo">
+    </div>
     <button class="menu-toggle" aria-expanded="false" aria-controls="navLinks">
       <i class="fas fa-bars"></i>
     </button>
