--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         A computer science graduate passionate about data analysis and artificial intelligence. My focus is on transforming complex data into actionable insights and exploring innovative approaches to solve real-world challenges. I’m always eager to learn, grow, and contribute to meaningful projects in this fast-evolving field.
       </p>
       <div class="buttons">
-        <a href="CV/CV-Lubna_Alghamdi_CV.pdf" class="download-btn" target="_blank" rel="noopener">Download CV</a>
+        <a href="CV/Lubna_Alghamdi_C.V.pdf" class="download-btn" target="_blank" rel="noopener">Download CV</a>
 
       </div>
     </div>
